ocp/dc-fevermap.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fevermap
    app.kubernetes.io/component: fevermap
    app.kubernetes.io/instance: fevermap
    app.kubernetes.io/part-of: fevermap
  name: fevermap
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: fevermap
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        deploymentconfig: fevermap
    spec:
      containers:
      - image: fevermap:latest
        imagePullPolicy: Always
        name: fevermap
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources:
          limits:
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/src/window-settings.js
          name: window-settings
          readOnly: true
          subPath: window-settings.js
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: window-settings
        name: window-settings
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - fevermap
      from:
        kind: ImageStreamTag
        name: fevermap:latest
    type: ImageChange
