ocp/svc-fevermap-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fevermap-api
    app.kubernetes.io/component: fevermap-api
    app.kubernetes.io/instance: fevermap-api
    app.kubernetes.io/name: "fevermap-api"
    app.kubernetes.io/part-of: fevermap
    app.openshift.io/runtime: ""
  name: fevermap-api
spec:
  ports:
  - name: 9000-tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: fevermap-api
    deploymentconfig: fevermap-api
  sessionAffinity: None
  type: ClusterIP
