ocp/svc-fevermap-db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mariadb")].port}
  labels:
    template: mariadb-ephemeral-template
  name: fevermap-db
spec:
  ports:
  - name: mariadb
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: fevermap-db
  sessionAffinity: None
  type: ClusterIP
