ocp/svc-fevermap.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fevermap
  name: fevermap
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deploymentconfig: fevermap
  sessionAffinity: None
  type: ClusterIP
