ocp/route-fevermap-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fevermap-api
  name: fevermap-api
spec:
  host: staging.fevermap.net
  path: /api
  port:
    targetPort: 9000-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: fevermap-api
    weight: 100
  wildcardPolicy: None
