ocp/route-fevermap.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fevermap
  name: fevermap
spec:
  host: staging.fevermap.net
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: fevermap
    weight: 100
  wildcardPolicy: None
